# myolingo

./: .gitignore  CMakeLists.txt  abstract_controller.cpp  abstract_controller.h  app.cpp  app.h  constants.h  controller.cpp  controller.h  main.cpp  menu.cpp  menu.h  model.cpp  model.h  scores.cpp  scores.h  view.cpp  view.h
Tasks/: abstract_task.cpp  abstract_task.h  pick_an_option_task.cpp  pick_an_option_task.h  task_widget.cpp  task_widget.h
